{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 818,
  "lineage": "d143d5a0-8ab5-c263-6d10-e6ead7b394cf",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkinshostnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/jenkinsHostNIC",
            "ip_configuration": [
              {
                "name": "jenkinsHostNicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/jenkinsHostPublicIP",
                "subnet_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-0D-3A-7E-B9-FC",
            "name": "jenkinsHostNIC",
            "network_security_group_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/jenkinsHostNetworkSecurityGroup",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "myResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            },
            "virtual_machine_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Compute/virtualMachines/jenkinsHostVM"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkinsslavenic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/jenkinsSlaveNIC",
            "ip_configuration": [
              {
                "name": "jenkinsSlaveNicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/jenkinsSlavePublicIP",
                "subnet_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-22-48-01-41-9B",
            "name": "jenkinsSlaveNIC",
            "network_security_group_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/jenkinsSlaveNetworkSecurityGroup",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "myResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            },
            "virtual_machine_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Compute/virtualMachines/jenkinsSlaveVM"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "pythonservernic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/pythonServerNIC",
            "ip_configuration": [
              {
                "name": "pythonServerNicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/pythonServerPublicIP",
                "subnet_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-22-48-07-E6-E5",
            "name": "pythonServerNIC",
            "network_security_group_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/pythonServerNetworkSecurityGroup",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "myResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            },
            "virtual_machine_id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Compute/virtualMachines/pythonServerVM"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkinshostnsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/jenkinsHostNetworkSecurityGroup",
            "location": "uksouth",
            "name": "jenkinsHostNetworkSecurityGroup",
            "resource_group_name": "myResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Jenkins",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkinsslavensg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/jenkinsSlaveNetworkSecurityGroup",
            "location": "uksouth",
            "name": "jenkinsSlaveNetworkSecurityGroup",
            "resource_group_name": "myResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pythonservernsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkSecurityGroups/pythonServerNetworkSecurityGroup",
            "location": "uksouth",
            "name": "pythonServerNetworkSecurityGroup",
            "resource_group_name": "myResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "PythonServer",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkinshostpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "jenkinshost-080719210648",
            "fqdn": "jenkinshost-080719210648.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/jenkinsHostPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.140.156.184",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "jenkinsHostPublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "myResourceGroup",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkinsslavepip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "jenkinsslave-080719210648",
            "fqdn": "jenkinsslave-080719210648.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/jenkinsSlavePublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.151.65.80",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "jenkinsSlavePublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "myResourceGroup",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "azureadm-080719210648",
            "fqdn": "azureadm-080719210648.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "myPublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "myResourceGroup",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pythonserverpip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "pythonserver-080719210648",
            "fqdn": "pythonserver-080719210648.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/publicIPAddresses/pythonServerPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.151.95.233",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pythonServerPublicIP",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "myResourceGroup",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "ip_configurations": [
              "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/jenkinsHostNIC/ipConfigurations/jenkinsHostNicConfiguration",
              "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/jenkinsSlaveNIC/ipConfigurations/jenkinsSlaveNicConfiguration",
              "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/networkInterfaces/pythonServerNIC/ipConfigurations/pythonServerNicConfiguration"
            ],
            "name": "mySubnet",
            "resource_group_name": "myResourceGroup",
            "virtual_network_name": "myVnet"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "uksouth",
            "name": "myVnet",
            "resource_group_name": "myResourceGroup",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/c793619e-4ef0-429f-b7bd-37ab072d9418/resourceGroups/myResourceGroup/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
                "name": "mySubnet"
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}